dim/spec/test_input/invalid_input/properties_array.dim
Config:
  - originator: CompanyName
    files: abc
Properties:
    - a
    - b
